package com.pmdm.casino.ui.features.juegos

data class JuegosUiState(
    val nombre: String = "",
    val tipo: String = "",
    val reglas: String = ""
)