package com.pmdm.casino.ui.features.login

data class LoginUiState(
    val login: String = "",
    val password: String = "",
    val recordarCuenta: Boolean = false
)
